fixed the modal close button overlap

--- a/curiositymachine/sass/components/_modals.scss
+++ b/curiositymachine/sass/components/_modals.scss
@@ -1,3 +1,5 @@
+// Bootstrap 4 Modal Overrides
+
 .modal-close {
   color: #fff;
   font-size: $base-font-size * 3;
@@ -14,4 +16,14 @@
 
 #how-vid {
   padding: 40px 20px 20px 20px;
+}
+
+.modal {
+  padding-top: 40px;
+}
+
+.modal-header {
+  h1 {
+    margin-bottom: 0px;
+  }
 }
